# Nova

./: .dockerignore  .gitignore  ARRAY_LENGTH_FEATURE.md  ARRAY_LENGTH_FIX_SUMMARY.md  ARRAY_METHODS_COMPLETE.md  ARRAY_METHODS_DEBUG_SESSION.md  ARRAY_METHODS_PROGRESS.md  BENCHMARK_REPORT.md  BENCHMARK_RESULTS.md  BENCHMARK_SUMMARY_TABLE.md  BUG_ANALYSIS_2025-12-09_CONTINUED.md  BUG_FIX_SESSION_SUMMARY.md  CHANGELOG.md  CLASS_INHERITANCE_FIX_COMPLETE.md  CLOSURE_BUG_ROOT_CAUSE.md  CLOSURE_COPYINOUT_SESSION_SUMMARY.md  CLOSURE_DEBUGGING_SESSION.md  CLOSURE_IMPLEMENTATION_COMPLETE.md  CLOSURE_IMPLEMENTATION_PROGRESS_2025-12-10.md  CLOSURE_PHASE3_COMPLETE.md  CLOSURE_PHASE3_PROGRESS.md  CLOSURE_ROOT_CAUSE_INVESTIGATION_2025-12-10.md  CLOSURE_SESSION_FINAL_2025-12-10.md  CLOSURE_STATUS_AND_NEXT_STEPS.md  CMakeLists.txt  COMPILER_FEATURE_STATUS.md  COMPILER_FIXES_SUMMARY.md  COMPILER_PROGRESS_REPORT.md  COMPILER_STATUS_100_PERCENT.md  COMPLETE_FEATURE_REPORT.md  COMPLETE_OPTIMIZATION_SUMMARY.md  COMPLETE_SESSION_SUMMARY_2025-12-09.md  COMPLETION_SUMMARY.md  CRITICAL_BUG_NESTED_CALLS.md  CRITICAL_FINDING_NO_COMPILATION.md  CRYPTO_BENCHMARK_RESULTS.md  DEFAULT_PARAMS_BUG_ANALYSIS.md  DEVELOPMENT_SESSION_SUMMARY.md  DEVELOPMENT_STATUS.md  Dockerfile  (+566 more)
.claude/: settings.local.json
.claude/agents/: nova-compiler-architect.md
.github/agents/: Nova Compiler Architect (C++).agent.md
.github/workflows/: README.md  build.yml  macos-toolchain.cmake
benchmarks/: BENCHMARK_GUIDE.md  FINAL_STATUS_REPORT.md  HTTP_STATUS.md  README_HTTP2.md  README_HTTP_BENCHMARKS.md  README_SQLITE.md  README_SQLITE_TH.md  SUCCESS_SUMMARY.md  basic.ts  bench1_write_small.txt  bench2_read_small.txt  bench3_write_medium.txt  bench4_read_medium.txt  bench5_copy.txt  bench6_mkdir.txt  bench_array.js  bench_array.ts  bench_array_minimal.js  bench_array_simple.js  bench_bundler.ps1  bench_complete_nova.txt  bench_compute.js  bench_compute.ts  bench_events.ps1  bench_http.ps1  bench_http2.ps1  bench_http2_comprehensive.ps1  bench_http2_simple.ps1  bench_http2_status.ps1  bench_http_bun_simple.ts  bench_http_comprehensive.ps1  bench_http_manual.ps1  bench_http_node_simple.js  bench_http_nova_simple.ts  bench_http_resource.ps1  bench_http_server.js  bench_http_simple.js  bench_http_simple.ps1  bench_http_simple.py  bench_http_throughput.ps1  (+170 more)
benchmarks/test_fs_working/: hello.txt
benchmarks/transpile_out/: test_transpile.js
cmake/: Version.h.in
compiler/: ARRAY_METHODS_STATUS.md  BREAK_CONTINUE_IMPLEMENTATION.md  CHANGELOG.md  CMakeLists.txt  COMPILER_ANALYSIS_REPORT.md  COMPREHENSIVE_TEST_REPORT.md  DEVELOPMENT_STATUS.md  DOCUMENTATION_INDEX.md  EXECUTION_IMPLEMENTATION.md  FEATURE_STATUS.md  FINAL_SUMMARY.md  KNOWN_ISSUES.md  LICENSE  METHODS_STATUS.md  MISSING_FEATURES.md  PROGRESS_CALLBACK_SUPPORT.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  README.md  SESSION_CALLBACK_COMPLETE.md  SESSION_SUMMARY.md  TEST_RESULTS.md  TODO.md  TS_JS_COMPATIBILITY.md  benchmark.ps1  break_debug4  break_debug7_test  build.bat  build.sh  debug_output3.txt  demo.ps1  examples.ts  run_all_tests.py  test_array_simple.ts  test_break_continue.ts  test_comparisons.ts  test_comprehensive_suite.ts  test_control_flow.ts  test_deep_chain.ts  test_do_while.ts  (+25 more)
compiler/.claude/: settings.local.json
compiler/docs/: ARCHITECTURE.md
compiler/examples/: hello.ts
compiler/grammar/: hir-grammar.json  llvm-ir-grammar.json  typescript-grammar.json
compiler/src/: main.cpp
compiler/tests/: string_ops_runtime.c  string_runtime.c  test_and_direct.ts  (+225 more)
docs/: ARRAY_ULTRA_OPTIMIZATION.md  BUILD.md  CRYPTO_STATUS.md  DOCKER_BUILD_GUIDE.md  HTTP2_BENCHMARK_REPORT.md  PATH_OPTIMIZATION_RESULTS.md  PERMISSION_SYSTEM_STATUS.md  QUICK_REFERENCE.md  STREAM_ULTRA_OPTIMIZATION.md  THROUGHPUT_OPTIMIZATION_PLAN.md  USAGE_GUIDE.md  asset-manifest.json  index.html  manifest.json
documents/: DX_ECOSYSTEM_BENCHMARK.md  EVENTS_BENCHMARK_REPORT.md  FINAL_OPTIMIZATION_SUMMARY.md  FINAL_RESULTS.md  HTTP2_OPTIMIZATION_REPORT.md  HTTPS_EXTREME_OPTIMIZATIONS.md  HTTP_COMPLETE_SUMMARY.md  KEEPALIVE_STATUS.md  LOOP_ULTRA_OPTIMIZATION.md  PROPERTY_RESOLUTION_FIX.md  SQLITE_ULTRA_SUMMARY_TH.md  STREAM_BENCHMARK_REPORT.md  STREAM_BENCHMARK_STATUS.md  ULTRA_OPTIMIZATION_REPORT.md
examples/: CMakeLists.txt  async.ts  fibonacci.ts  nova-fs-basic-test.ts  nova-fs-demo.ts  nova-fs-final-test.ts  nova-fs-streams-test.ts  nova-modules-demo.ts  nova-os-demo.ts  nova-path-demo.ts  showcase.ts
grammar/: javascript-grammar.json  mir-grammar.json
node_test_case/: 01_basic_types.js  02_arithmetic.js  03_string_methods.js  04_array_methods.js  05_object_operations.js  06_math_operations.js  07_json_operations.js  08_control_flow.js  09_functions.js  10_comparison_operators.js  README.md  TEST_RESULTS.md  run_all_tests.js  test_comparison.sh
nova_fs_test/: test.txt
scripts/: install.ps1  install.sh
src/: main.cpp  nnpm_main.cpp  nova_main.cpp  novac_main.cpp
tests/: CMakeLists.txt  basic.test.ts  bun_style.test.ts  debug_while.ts  loop.test.ts  math.test.ts  run_all_tests.py  run_tests.ps1  string_methods_runtime.c  test_advanced.ts  test_all_expressions.ts  test_and.ts  test_and_local.ts  test_and_local_var.ts  test_and_only.ts  test_array_at.ts  test_array_basic.ts  test_array_basic_access.ts  test_array_concat_elements.ts  test_array_every.ts  test_array_findLast.ts  test_array_findLastIndex.ts  test_array_forEach_simple2.ts  test_array_includes.ts  test_array_isarray.ts  test_array_join.ts  test_array_lastIndexOf.ts  test_array_length.ts  test_array_length_after_push.ts  test_array_length_dynamic.ts  test_array_literal.ts  test_array_map.ts  test_array_push_pop.ts  test_array_reverse.ts  test_array_search.ts  test_array_simd.ts  test_array_simple.ts  test_array_slice.ts  test_array_slice_simple.ts  test_array_slice_verify.ts  (+256 more)
tests/fixtures/: object-method-shorthand.nova  object-method-syntax-only.nova
tests/integration/: CompilationTest.cpp  EndToEndTest.cpp
tests/unit/: HIRGenTest.cpp  TypeCheckerTest.cpp
website/: DEPLOY.md  README.md  deploy.js  package.json
(+290 files in other folders)
